--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -21,13 +21,13 @@
 	setInterval(function() {
 		$("#div2").load("supplement");}, 20000);
 </script>
-{% endif %}  
+{% endif %}
 
 
 {% endblock %}
 
 {% block page_content %}
-	
+
     <div class="row">
 	<div class="col-md-8"><h1> {{ user.username }}'s Portal </h1></div>
 	<div class="col-md-4"><h2>Current Bank:${{ user.money }}</h2></div>
@@ -41,14 +41,14 @@
     <h3 class="panel-title">Inbox</h3>
   </div>
   <div class="panel-body">
-    <div id="div1"><h2>0 Messages</h2></div>
+    <div id="div1"><h2>Receiving Messages...</h2></div>
   </div>
 </div>
 </div>
-  
-  
-  
-  
+
+
+
+
 <div class="col-md-4">
 	  <!-- Button trigger modal for Finished -->
 <button type="button" class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#FinishModal">
@@ -104,7 +104,7 @@
 	<button class="btn btn-info btn-lg btn-block" onClick="window.open( 'https://ciscolive1.cisco.com/', '_blank' )">Click here to access the topology</button>
 
 </div>
-	 
+
 </div>
 {% if user.supplement == 1 %}
     <div class="row">
@@ -119,10 +119,10 @@
 </div>
 </div>
 
-{% endif %}  
+{% endif %}
 
-	
-  
+
+
 <!-- </div> -->
-	  
+
 {% endblock %}
