The Version that went LIVE

--- a/app/templates/T1A0.html
+++ b/app/templates/T1A0.html
@@ -18,7 +18,11 @@
 					<li>
 						BGP AS: 201</li>
 					<li>
-						Session Password: BackStabbath</li>
+						BGP Peering Password: BackStabbath</li>
+					<li>
+						Peer v4 Address: 100.101.201.1</li>
+					<li>
+						Peer v6 Address: 2001:101:201::1</li>
 				</ul>
 			</li>
 			<li>
@@ -27,11 +31,14 @@
 					<li>
 						BGP AS: 202</li>
 					<li>
-						Session Password: ArrowSmith</li>
+						BGP Peering Password: ArrowSmith</li>
+					<li>
+						Peer v4 Address: 100.101.202.1</li>
+					<li>
+						Peer v6 Address: 2001:101:202::1</li>
 				</ul>
 			</li>
 		</ul>
-		<p>
-			Also, we have connected to a private research network directly from our core router. They run BGP and are configured with the autonomous system number of 79. Bring up a peering session with them from our core router. Show us on the core router that they send us one v4 and one v6 route.</p>
+
 	</body>
 </html>
