add support for IPv6 lab

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -101,7 +101,7 @@
 
  <p>
 	<br>
-	<button class="btn btn-info btn-lg btn-block" onClick="window.open( 'https://ciscolive1.cisco.com/', '_blank' )">Click here to access the topology</button>
+	<!-- <button class="btn btn-info btn-lg btn-block" onClick="window.open( 'https://ciscolive1.cisco.com/', '_blank' )">Click here to access the topology</button> -->
 
 </div>
 
