Added sparkbot integration & jquery/ajax to update user page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Introduction to BGP Lab (LTRRST-1179){% endblock %}
+{% block title %}BGP For Fun and Fake Profit (LTRRST-1179){% endblock %}
 
 {% block page_content %}
 <div class="page-header">
