--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Introduction to BGP Lab - Login{% endblock %}
+{% block title %}BGP For Fun and Fake Profit - Login{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
